Cascading Change Log

2.0.0 [unreleased]

  Added support for gradle.

  Renamed c.f.FlowSkipIfSinkStale to FlowSkipIfSinkNotStale to match the semantics.

  Added support for c.f.Flow tags via the c.f.FlowDef class.

  Added c.f.FlowDef to allow for creating flow definitions via a fluent builder interface.

  Added SUBMITTED status to c.s.CascadingStats to properly track when a job is submitted vs when it actually begins
  processing after being queued.

  Added management interfaces for capturing detailed statistics.

  Decoupled core from Apache Hadoop, removed stack based streaming model. Use c.f.h.HadoopFlowConnector to plan
  Hadoop specific flows.

  Implemented 'local' mode to support independent processing of complex processes in memory. Use
  c.f.l.LocalFlowConnector for local mode specific flows.

  Updated and simplified c.t.Tap and c.t.Scheme interfaces. Changes are not backwards compatible to 1.x releases.

  Implemented new pipelining infrastructure to support more complex streaming topologies.

1.2.5 (unreleased)

  Fixed bug where ISE was thrown if c.f.Flow#stop() was called immediately after #start().

1.2.4

  Added info logging of current split input path with a task, if any.

  Fixed bug in c.o.f.And, c.o.f.Or, and c.o.f.Xor where the sub-select of arguments was not honored.

  Added info log message when writing "direct" to a filesystem, bypassing the temporary folder removing the need to
  rename the output file to its target location.

  Fixed bug where if all paths that match a glob pattern are empty, an exception is not thrown causing Hadoop to throw
  a java.lang.ArrayIndexOutOfBoundsException.

  Updated planner to issue an error message if a tail c.p.Pipe instance doesn't not properly bind to a c.t.Tap instance.

1.2.3

  Added c.f.Flow#setMaxConcurrentSteps to set the maximum number of steps that can be submitted concurrently.
