@@ -2,6 +2,9 @@ Cascading Change Log
 
 2.0.0 [unreleased]
 
+  Changed c.f.Flow to prevent #complete() from returning while #stop() is executing. Should prevent certain kinds
+  of race conditions when a shutdown hook is used, from a different thread, to stop running flows.
+
   Added support for gradle.
 
   Renamed c.f.FlowSkipIfSinkStale to FlowSkipIfSinkNotStale to match the semantics.
